<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvProducto"
            android:textStyle="bold"
            android:id="@+id/txvProducto"
            android:textSize="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ckbEstado"
                android:layout_marginRight="15dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvCantidad"
            android:textStyle="italic"
            android:id="@+id/txvCant" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvCantVacia"
            android:textStyle="italic"
            android:id="@+id/txvNumProd"
            android:layout_marginLeft="5dp"
            android:textColor="#fc0404" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvPrecio"
            android:textStyle="italic"
            android:id="@+id/textView2"
            android:layout_marginLeft="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/txvPrecioPro"
            android:textStyle="italic"
            android:layout_marginLeft="5dp"
            android:textColor="#fc0404" />
    </LinearLayout>

</LinearLayout>